Fixed z-index of list header

--- a/client/styles/list.css
+++ b/client/styles/list.css
@@ -24,6 +24,7 @@ div.list-header {
 	position: sticky;
 	background-color: var(--bg-normal);
 	top: 0em;
+	z-index: 1;
 
 	@media (width < 700px) {
 		display: none !important;
